profile page tabs position align fixed

--- a/docroot/sites/all/themes/ambitious/sass/layouts/topic-forum.scss
+++ b/docroot/sites/all/themes/ambitious/sass/layouts/topic-forum.scss
@@ -876,6 +876,7 @@ div.messages.status{
   }
   .quicktabs_main{
     @extend #comments;  
+    min-height:310px;
   }
 
 }
